--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1>8051 Microcontroller</h1>
 	<div id="flex0">
 		<div id="flex1">
-			<img src="timerdelay.jpg" alt="steps to delay img" style="width:100%">
+			<img src="images\\timerdelay.jpg" alt="steps to delay img" style="width:100%">
 		</div>
 		<div id="flex2">
 			<p style="color:black;background-color:aqua;opacity:1.0;width: 80%;font-size: 20px;font-weight: bolder;font-family:Times New Roman;margin-right: auto;border:0px groove white;padding: 30px;border-radius: 10px;" >
@@ -45,7 +45,7 @@
 			<input type="reset" value="RESET" name="reset" class="reset"><br><br>
 		</form>
 		<div id="box1" >
-			<form name="fre" style="background-image: url(bg4.jpg);background-size: cover;width:400px;height:500px;box-shadow: 1px  1px 1px 4px white" align="center" onmouseover ="change(this)" onmouseout="retain(this)"  >
+			<form name="fre" style="background-image: url(images\\bg4.jpg);background-size: cover;width:400px;height:500px;box-shadow: 1px  1px 1px 4px white" align="center" onmouseover ="change(this)" onmouseout="retain(this)"  >
 				<br><br>
 				<p style="color:darkblue;font-size:20px;font-weight: bolder;font-family: Georgia;">Here frequency field(input) is the frequency of the square wave to be generated using 8051 ALP<br><br>
 					<font color="black">All the values of time and delay are in millisecs(ms)</font></p><br>
