--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Delay</title>
+	<title>8051 Delay Calculation</title>
 	<link rel="stylesheet" type="text/css" href="index.css" />
 	<script src="https://kit.fontawesome.com/7a5e17e072.js" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="index.js">
@@ -45,7 +45,7 @@
 			<input type="reset" value="RESET" name="reset" class="reset"><br><br>
 		</form>
 		<div id="box1" >
-			<form name="fre" style="background-image: url(images\\bg4.jpg);background-size: cover;width:400px;height:500px;box-shadow: 1px  1px 1px 4px white" align="center" onmouseover ="change(this)" onmouseout="retain(this)"  >
+			<form name="fre" style="background-image: url(images\\form2bg.jpg);background-size: cover;width:400px;height:500px;box-shadow: 1px  1px 1px 4px white" align="center" onmouseover ="change(this)" onmouseout="retain(this)"  >
 				<br><br>
 				<p style="color:darkblue;font-size:20px;font-weight: bolder;font-family: Georgia;">Here frequency field(input) is the frequency of the square wave to be generated using 8051 ALP<br><br>
 					<font color="black">All the values of time and delay are in millisecs(ms)</font></p><br>
