--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<img src="images\\timerdelay.jpg" alt="steps to delay img" style="width:100%">
 		</div>
 		<div id="flex2">
-			<p style="color:black;background-color:aqua;opacity:1.0;width: 80%;font-size: 20px;font-weight: bolder;font-family:Times New Roman;margin-right: auto;border:0px groove white;padding: 30px;border-radius: 10px;" >
+			<p style="color:black;background-color:aqua;width: 80%;font-size: 20px;font-weight: bolder;font-family:Times New Roman;margin-right: auto;border:0px groove white;padding:20px;border-radius: 10px;" >
 				Designing a delay program using 8051 timers.<br><br>
 				<i class="fas fa-cannabis"></i>While designing delay programs in 8051, calculating the initial value that has to be loaded inot TH and TL registers forms a very important thing. Let us see how it is done.<br><br>
 
