--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>8051 Delay Calculation</title>
+	<meta charset="utf-8">
+	<meta name="description" content="This website helps to calculate count value required to generate a square wave of required frequency">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="index.css" />
 	<script src="https://kit.fontawesome.com/7a5e17e072.js" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="index.js">
