--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</form>
 		</div>
 	</div><br><br>
-	<div style="background-color: white;text-align:center;padding: 20px;width:100%;">
+	<div style="background-color: white;text-align:center;padding: 20px;width:100%;margin-right:auto">
 		<b style="font-size: 30px;">8051 Timers Register Description<b><br><br>
 		TMOD Register<br>
 		<p style="font-size: 25px;color: blue">If the Count Value is 0xFFBE(say) we can use Timer mode 2 i.e 8 bit auto relaod and TH0/1=BE;</p><br>
