--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div id="box">
 		<form name="delayform"  align="center" onmouseover ="change(this)" onmouseout="retain(this)">
 			<!--<font style="font-size: 20px;font-weight: bolder;">Frequency (in Khz):</font><input type="text" name="fre" id="fre" value="0"><br>OR<br> -->
-			<p style="color:white;font-size:20px;font-weight: bolder;font-family: Georgia;">Here frquency field and Time field (input) are the frequency and time period of the square wave to be generated</p>
+			<p style="color:darkblue;font-size:20px;font-weight: bolder;font-family: Georgia;">Here frquency field and Time field (input) are the frequency and time period of the square wave to be generated</p>
 			
 			<br><br>
 			<font style="font-size: 20px;font-weight: bolder;">Time (in ms):</font><input type="text" name="time" id="time" ><br><br>
@@ -50,7 +50,7 @@
 		<div id="box1" >
 			<form name="fre" style="background-image: url(images\\form2bg.jpg);background-size: cover;width:370px;height:500px;box-shadow: 1px  1px 1px 4px white" align="center" onmouseover ="change(this)" onmouseout="retain(this)"  >
 				<br><br>
-				<p style="color:darkblue;font-size:20px;font-weight: bolder;font-family: Georgia;">Here frequency field(input) is the frequency of the square wave to be generated using 8051 ALP<br><br>
+				<p style="color:white;font-size:20px;font-weight: bolder;font-family: Georgia;">Here frequency field(input) is the frequency of the square wave to be generated using 8051 ALP<br><br>
 					<font color="black">All the values of time and delay are in millisecs(ms)</font></p><br>
 				<p style="color:lime;background-color: black;font-size:20px;font-weight: bolder;font-style: italic;"> Frequency not given !! No worries ..find here</p><br>
 				<font style="font-size: 20px;font-weight: bolder;">Frequency(in Khz):</font><input type="text" name="frequency" id="fre"><br><br>
