--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			
 			<br><br>
 			<font style="font-size: 20px;font-weight: bolder;">Time (in ms):</font><input type="text" name="time" id="time" ><br><br>
-			<font style="font-size: 20px;font-weight: bolder;">Delay (in ms):</font><input type="text" name="delay" id="delay" onfocus ="disable1()" onblur="undisable1()"><br><br>
+			<font style="font-size: 20px;font-weight: bolder;">Delay (in ms):</font><input type="text" name="delay" id="delay" onfocus ="disable1()" onblur="undisable1(this)"><br><br>
 			<font style="font-size: 20px;font-weight: bolder;">Count Value:</font><input type="text" name="count" id="count" onfocus ="disable2()" onblur="undisable2()"><br><br>
 			<font style="font-size: 20px;font-weight: bolder;">CV(in hex):</font><input type="text" name="hex" id="hex" onfocus ="disable3()" onblur="undisable3()"><br><br>
 			<input type="button" onclick="validate()" class="button" name="delaytime" value="Calculate"/><br><br>
