--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div id="box">
 		<form name="delayform"  align="center" onmouseover ="change(this)" onmouseout="retain(this)">
 			<!--<font style="font-size: 20px;font-weight: bolder;">Frequency (in Khz):</font><input type="text" name="fre" id="fre" value="0"><br>OR<br> -->
-			<p style="color:darkblue;font-size:20px;font-weight: bolder;font-family: Georgia;">Here  Time field (input) is the time period of the square wave to be generated . If you want to create 'x' milliseconds delay  then enter the value '2x' in time field for getting CV</p>
+			<p style="color:darkblue;font-size:20px;font-weight: bolder;font-family: Georgia;">Here  Time field (input) is the time period of the square wave to be generated . <br> If you want to create 'x' milliseconds delay  then enter the value '2x' in time field for getting Count Value i.e TH and TL values</p>
 			
 			<br><br>
 			<font style="font-size: 20px;font-weight: bolder;">Time (in ms):</font><input type="text" name="time" id="time" ><br><br>
