--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	<div id="box">
 		<form name="delayform"  align="center" onmouseover ="change(this)" onmouseout="retain(this)">
 			<!--<font style="font-size: 20px;font-weight: bolder;">Frequency (in Khz):</font><input type="text" name="fre" id="fre" value="0"><br>OR<br> -->
-			<p style="color:darkblue;font-size:20px;font-weight: bolder;font-family: Georgia;">Here  Time field (input) is the time period of the square wave to be generated . <br> If you want to create 'x' milliseconds delay  then enter the value '2x' in time field for getting Count Value i.e TH and TL values</p>
-			
-			<br><br>
+			<p style="color:darkblue;font-size:20px;font-weight: bolder;font-family: Georgia;">Here  Time field (input) is the time period of the square wave to be generated . <br><br>
+				If you want to create 'x' milliseconds delay  then enter the value '2x' in time field for getting Count Value i.e TH and TL values</p>
+			<br>
 			<font style="font-size: 20px;font-weight: bolder;">Time (in ms):</font><input type="text" name="time" id="time" ><br><br>
 			<font style="font-size: 20px;font-weight: bolder;">Delay (in ms):</font><input type="text" name="delay" class="hover" onfocus ="disable1(this)" onblur="undisable1(this)"><br><br>
 			<font style="font-size: 20px;font-weight: bolder;">Count Value:</font><input type="text" name="count" class="hover" onfocus ="disable2()" onblur="undisable2()"><br><br>
