--- a/index.html
+++ b/index.html
@@ -77,12 +77,24 @@
 				<th>
 					M0
 				</th>
+				<th>
+					Gate
+				</th>
+				<th>
+					C/T
+				</th>
+				<th>
+					M1
+				</th>
+				<th>
+					M0
+				</th>
 			</tr>
 			<tr>
-				<th colspan="2">
+				<th colspan="4">
 					Timer 1
 				</th>
-				<th colspan="2">
+				<th colspan="4">
 					Timer 0
 				</th>
 			</tr>
