--- a/index.html
+++ b/index.html
@@ -100,7 +100,69 @@
 			</tr>
 			
 		</table><br>
+			G=0 ,if we control timer/counter through software and G=1 if we control through hardware <br><br>
+			C/T =0 , if we use timer and C/T=1 , if we use counter<br><br>
+			M1 and M0 values are taken according to the mode of operation of timers which are given in below table .<br><br>
+			Using above values we define the value that is to be loaded in TMOD register <br><br>
+			EXAMPLE:<br><br>
+			<p style="color:red">If the timer1(C/T=0) is operating in mode 1(M1=0 M0=1) ,timer0 as counter0 (C/T=1) in mode2(M1=1 M0=0) and  we are controlling both timers through software(G=0)  then TMOD = 16H </p>
 		<b style="font-size:20px;text-align: justify;">
+			<p style="font-size: 25px;color: blue">If the Count Value is 0xFFBE(say) we can use Timer mode 2 i.e 8 bit auto relaod and TH0/1=BE;</p><br>
+		<table style="width:40%;height: 80px;font-size: 20px;" align="center" >
+			<tr>
+				<th>
+					Gate
+				</th>
+				<th>
+					C/T
+				</th>
+				<th>
+					M1
+				</th>
+				<th>
+					M0
+				</th>
+				<th>
+					Gate
+				</th>
+				<th>
+					C/T
+				</th>
+				<th>
+					M1
+				</th>
+				<th>
+					M0
+				</th>
+			</tr>
+				<tr>
+				<th>
+					0
+				</th>
+				<th>
+					0
+				</th>
+				<th>
+					0
+				</th>
+				<th>
+					1
+				</th>
+				<th>
+					0
+				</th>
+				<th>
+					1
+				</th>
+				<th>
+					1
+				</th>
+				<th>
+					0
+				</th>
+			</tr>
+			
+			
 			Mode 1 and 2 are timer modes used in 8051 microcontroller.
 			If the Count value is less than 256 or hex value FF then the timer works in mode 2 and it is 8 bit auto relaod.
 			If the count value is greater than 256 then the timer works in mode 1 and 16 bit .
@@ -178,7 +240,7 @@
 			</tr>
 					
 		</table><br>
-
+		
 
 	</div>
 </body>
