--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 					0
 				</th>
 			</tr>
+		</table>
 			
 			<b style="font-size:20px;text-align: justify;">
 			<p style="font-size: 25px;color: blue">If the Count Value is 0xFFBE(say) we can use Timer mode 2 i.e 8 bit auto relaod and TH0/1=BE;</p><br>
