--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
 			G=0 ,if we control timer/counter through software and G=1 if we control through hardware <br><br>
 			C/T =0 , if we use timer and C/T=1 , if we use counter<br><br>
 			M1 and M0 values are taken according to the mode of operation of timers which are given in below table .<br><br>
-				Using above values we define the value that is to be loaded in TMOD register </p><br>
-			
+				Using above values we define the value that is to be loaded in TMOD register </p>
 			<p style="color:red;font-size:20px;">EXAMPLE:<br><br> If the timer1(C/T=0) is operating in mode 1(M1=0 M0=1) ,timer0 as counter0 (C/T=1) in mode2(M1=1 M0=0) and  we are controlling both timers through software(G=0)  then TMOD = 16H </p>
-		
+		<br>
 		<table style="width:40%;height: 80px;font-size: 20px;" align="center" >
 			<tr>
 				<th>
