--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		</div>
 	</div><br><br>
 	<div style="background-color: white;text-align:justify;padding:10px;width:98%;margin-right:auto">
-		<b style="font-size: 30px;text-align:center;color:blue">8051 Timers Register Description<b><br><br>
-		TMOD Register<br>
+		<font style="font-size: 30px;text-align:center;color:blue">8051 Timers Register Description</font><br><br>
+			<font style="font-size:25px;">TMOD Register</font><br>
 		<p style="font-size: 25px;color: blue">If the Count Value is 0xFFBE(say) we can use Timer mode 2 i.e 8 bit auto relaod and TH0/1=BE;</p><br>
 		<table style="width:40%;height: 80px;font-size: 20px;" align="center" >
 			<tr>
