--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 	</div><br><br>
 	<div style="background-color: white;text-align:justify;padding:10px;width:98%;margin-right:auto">
-		<h1 style="font-size: 30px;text-align:center">8051 Timers Register Description<br>TMOD Register</h1><br>
+		<h1 style="font-size: 30px;text-align:center;color:green;">8051 Timers Register Description<br><br>TMOD Register</h1>
 		<p style="font-size: 25px;color: blue;font-weight:bolder">If the Count Value is 0xFFBE(say) we can use Timer mode 2 i.e 8 bit auto relaod and TH0/1=BE;</p><br>
 		<table style="width:40%;height: 80px;font-size: 20px;" align="center" >
 			<tr>
