--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 	</div><br><br>
 	<div style="background-color: white;text-align:justify;padding:10px;width:98%;margin-right:auto">
 		<h1 style="font-size: 30px;text-align:center;color:green;">8051 Timers Register Description<br><br>TMOD Register</h1>
-		<p style="font-size: 25px;color: blue;font-weight:bolder">If the Count Value is 0xFFBE(say) we can use Timer mode 2 i.e 8 bit auto relaod and TH0/1=BE;</p><br>
+		<b style="font-size:20px;text-align: justify;">
+		<p style="font-size: 25px;color: blue;">If the Count Value is 0xFFBE(say) we can use Timer mode 2 i.e 8 bit auto relaod and TH0/1=BE;</p><br>
 		<table style="width:40%;height: 80px;font-size: 20px;" align="center" >
 			<tr>
 				<th>
@@ -161,8 +162,7 @@
 			</tr>
 		</table>
 			
-			<b style="font-size:20px;text-align: justify;">
-			<p style="font-size: 25px;color: blue">If the Count Value is 0xFFBE(say) we can use Timer mode 2 i.e 8 bit auto relaod and TH0/1=BE;</p><br>
+			
 			Mode 1 and 2 are timer modes used in 8051 microcontroller.
 			If the Count value is less than 256 or hex value FF then the timer works in mode 2 and it is 8 bit auto relaod.
 			If the count value is greater than 256 then the timer works in mode 1 and 16 bit .
