--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</form>
 		</div>
 	</div><br><br>
-	<div style="background-color: white;text-align:justify;padding:10px;width:98%;margin-right:auto">
+	<div style="background-color: white;text-align:justify;padding:10px;width:98%;margin-right:auto;border-radius:7px;">
 		<h1 style="font-size: 30px;text-align:center;color:green;">8051 Timers Register Description<br><br>TMOD Register</h1>
 		<b style="font-size:20px;text-align: justify;">
 		<p style="font-size: 25px;color: blue;">If the Count Value is 0xFFBE(say) we can use Timer mode 2 i.e 8 bit auto relaod and TH0/1=BE;</p><br>
